--- a/index.html
+++ b/index.html
@@ -18,22 +18,31 @@
 </head>
 
 <body>
-    <div id="front">
-        <img src="./pfp.jpg" id="pfp" />
-
-        <div id="name-sticky">
-            <h1><a href="#front">Wesley Weisenberger</a></h1>
-        </div>
-
-        <h2>Computer Science @ UC Berkeley</h2>
-
-        <div id="picker">
-            <a href="./Wesley_Weisenberger_resume.pdf" target="_blank" rel="noopener noreferrer">resume</a>
-            <a href="https://github.com/wesleynw/" target="_blank" rel="noopener noreferrer">github</a>
-            <a href="https://www.linkedin.com/in/wesleynw/" target="_blank" rel="noopener noreferrer">linkedin</a>
-        </div>
-
+    <!-- <div id="front"> -->
+    <div id="front"></div>
+    <div id="night-mode-container">
+        <!-- <button id="night-mode-button">night mode</button> -->
+        <a id="night-mode-button">night mode 🌗</a>
     </div>
+    <img src="./pfp.jpg" id="pfp" />
+
+
+    <div id="name-box"><a href="#front" id="name">Wesley Weisenberger</a></div>
+    <!-- <h1 id="name"><a href="#front">Wesley Weisenberger</a></h1> -->
+    <!-- </div> -->
+
+    <!-- </div> -->
+    <h2 id="frontpage-subtitle">Computer Science @ UC Berkeley</h2>
+
+    <div id="picker">
+        <a href="./Wesley_Weisenberger_resume.pdf" target="_blank" rel="noopener noreferrer">resume</a>
+        <a href="https://github.com/wesleynw/" target="_blank" rel="noopener noreferrer">github</a>
+        <a href="https://www.linkedin.com/in/wesleynw/" target="_blank" rel="noopener noreferrer">linkedin</a>
+    </div>
+
+    <div id="frontpage-spacer"></div>
+
+    <!-- </div> -->
     <div class="content-container">
         <h2 class="content">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
