fixed front page height + sticky header

--- a/index.html
+++ b/index.html
@@ -18,29 +18,32 @@
 </head>
 
 <body>
-    <!-- <div id="front"> -->
-    <div id="front"></div>
-    <div id="night-mode-container">
-        <!-- <button id="night-mode-button">night mode</button> -->
-        <a id="night-mode-button">night mode 🌗</a>
+    <!-- <div id="front"></div> -->
+
+    <div id="landing">
+        <div id="night-mode-container">
+            <a id="night-mode-button">night mode 🌗</a>
+        </div>
+
+        <div id="landing-top-padding"></div>
+
+        <img src="./pfp.jpg" id="pfp" />
+
+
+        <div id="name-placeholder"></div>
+        <div id="name-box"><a href="#front" id="name">Wesley Weisenberger</a></div>
+        <h2 id="frontpage-subtitle">Computer Science @ UC Berkeley</h2>
+
+        <div id="picker">
+            <a href="./Wesley_Weisenberger_resume.pdf" target="_blank" rel="noopener noreferrer">resume</a>
+            <a href="https://github.com/wesleynw/" target="_blank" rel="noopener noreferrer">github</a>
+            <a href="https://www.linkedin.com/in/wesleynw/" target="_blank" rel="noopener noreferrer">linkedin</a>
+        </div>
+
     </div>
-    <img src="./pfp.jpg" id="pfp" />
 
 
-    <div id="name-box"><a href="#front" id="name">Wesley Weisenberger</a></div>
-    <!-- <h1 id="name"><a href="#front">Wesley Weisenberger</a></h1> -->
-    <!-- </div> -->
-
-    <!-- </div> -->
-    <h2 id="frontpage-subtitle">Computer Science @ UC Berkeley</h2>
-
-    <div id="picker">
-        <a href="./Wesley_Weisenberger_resume.pdf" target="_blank" rel="noopener noreferrer">resume</a>
-        <a href="https://github.com/wesleynw/" target="_blank" rel="noopener noreferrer">github</a>
-        <a href="https://www.linkedin.com/in/wesleynw/" target="_blank" rel="noopener noreferrer">linkedin</a>
-    </div>
-
-    <div id="frontpage-spacer"></div>
+    <!-- <div id="landing-bottom-padding"></div> -->
 
     <!-- </div> -->
     <div class="content-container">
