--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wesley Weisenberger</title>
 
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Corben&display=swap" rel="stylesheet"> -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -18,7 +14,6 @@
 </head>
 
 <body>
-    <!-- <div id="front"></div> -->
 
     <div id="landing">
         <div id="night-mode-container">
@@ -31,7 +26,9 @@
 
 
         <div id="name-placeholder"></div>
-        <div id="name-box"><a href="#front" id="name">Wesley Weisenberger</a></div>
+        <div id="name-box"><a href="#landing" id="name">
+                <h1>Wesley Weisenberger</h1>
+            </a></div>
         <h2 id="frontpage-subtitle">Computer Science @ UC Berkeley</h2>
 
         <div id="picker">
