--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- visitor counter: {{views}} -->
 
     <div id="landing">
         <div id="night-mode-container">
@@ -27,7 +28,7 @@
 
         <div id="name-placeholder"></div>
         <div id="name-box"><a href="#landing" id="name">
-                <h1>Wesley Weisenberger</h1>
+                <h1 id="name-text">Wesley Weisenberger</h1>
             </a></div>
         <h2 id="frontpage-subtitle">Computer Science @ UC Berkeley</h2>
 
@@ -44,12 +45,15 @@
 
     <!-- </div> -->
     <div class="content-container">
+        <h1>about me</h1>
         <h2 class="content">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
+            Hello! I'm a fourth year student studying computer science and data science at UC Berkeley. My
+            projects range from websites like this to <a href="https://en.wikipedia.org/wiki/End-to-end_encryption"
+                target="_blank" rel="noopener noreferrer">E2EE</a> file sharing systems, to Discord bots. I'm current on
+            the search for a software engineering position after graduation.
+
+
+
         </h2>
     </div>
     <div class="content-container">
