finished working on 10/4

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <body>
     <!-- visitor counter: {{views}} -->
 
+    <div id="greyscreen"></div>
+
     <div id="landing">
         <div id="night-mode-container">
             <a id="night-mode-button">night mode 🌗</a>
@@ -40,30 +42,34 @@
 
     </div>
 
-
-    <!-- <div id="landing-bottom-padding"></div> -->
-
-    <!-- </div> -->
     <div class="content-container">
         <h1>about me</h1>
-        <h2 class="content">
+        <h2 class="project-description">
             Hello! I'm a fourth year student studying computer science and data science at UC Berkeley. My
             projects range from websites like this to <a href="https://en.wikipedia.org/wiki/End-to-end_encryption"
                 target="_blank" rel="noopener noreferrer">E2EE</a> file sharing systems, to Discord bots. I'm current on
             the search for a software engineering position after graduation.
-
-
-
         </h2>
     </div>
+
     <div class="content-container">
-        <h2 class="content">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
-        </h2>
+        <h1>projects</h1>
+        <h2 style="margin-left: auto">End To End Encrypted File System</h2>
+
+        <div class="project">
+            <!-- <div class="project-picture" style="height: 30vw;top: 0px; left: 0px;"></div> -->
+            <img id="e2ee-img" class=project-picture src="./b.png" />
+            <h2 class="content project-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex
+                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                mollit
+                anim id est laborum.
+            </h2>
+        </div>
     </div>
     <div class="content-container">
         <h2 class="content">
