fix styling on phone

--- a/index.html
+++ b/index.html
@@ -37,54 +37,60 @@
         <h2 id="frontpage-subtitle">Computer Science @ UC Berkeley</h2>
       </div>
 
-      <div class="vertical-fb" style="text-align: right">
-        <h2>
-          <a
-            href="./Wesley_Weisenberger_resume.pdf"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="external-link"
-          >
-            resume
-          </a>
-          <img src="./arrow-up.svg" class="arrow" />
-        </h2>
-        <h2>
-          <a
-            href="https://github.com/wesleynw/"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="external-link"
-            >github</a
-          >
-          <img src="./arrow-up.svg" class="arrow" />
-        </h2>
-        <h2>
-          <a
-            href="https://www.linkedin.com/in/wesleynw/"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="external-link"
-            >linkedin</a
-          >
-          <img src="./arrow-up.svg" class="arrow" />
-        </h2>
+      <div class="vertical-fb" style="text-align: right" id="link-box">
+        <div id="first-half-links">
+          <h2>
+            <a
+              href="./Wesley_Weisenberger_resume.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="external-link"
+            >
+              resume
+            </a>
+            <img src="./arrow-up.svg" class="arrow" />
+          </h2>
+          <h2>
+            <a
+              href="https://github.com/wesleynw/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="external-link"
+              >github</a
+            >
+            <img src="./arrow-up.svg" class="arrow" />
+          </h2>
+          <h2>
+            <a
+              href="https://www.linkedin.com/in/wesleynw/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="external-link"
+              >linkedin</a
+            >
+            <img src="./arrow-up.svg" class="arrow" />
+          </h2>
+        </div>
 
         <div style="height: 40px"></div>
 
-        <h2>
-          <a href="#about-me" class="internal-link">about me</a>
-          <img src="./arrow-down.svg" class="arrow" />
-        </h2>
-        <h2>
-          <a href="#projects" class="internal-link">projects</a>
-          <img src="./arrow-down.svg" class="arrow" />
-        </h2>
-        <h2>
-          <a href="contact-me" class="internal-link">contact me</a>
-          <img src="./arrow-down.svg" class="arrow" />
-        </h2>
+        <div id="second-half-links">
+          <h2>
+            <a href="#about-me" class="internal-link">about me</a>
+            <img src="./arrow-down.svg" class="arrow" />
+          </h2>
+          <h2>
+            <a href="#projects" class="internal-link">projects</a>
+            <img src="./arrow-down.svg" class="arrow" />
+          </h2>
+          <h2>
+            <a href="contact-me" class="internal-link">contact me</a>
+            <img src="./arrow-down.svg" class="arrow" />
+          </h2>
+        </div>
       </div>
+
+      <div style="height: 40px"></div>
 
       <!-- <div id="picker">
             <a href="./Wesley_Weisenberger_resume.pdf" target="_blank" rel="noopener noreferrer">resume</a>
